Fixing up several warnings

--- a/MacOS X/Resources/GLQuakeWorld/Info.plist
+++ b/MacOS X/Resources/GLQuakeWorld/Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Quake</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fruitz-of-dojo.glquakeworld</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
