--- a/MacOS X/Resources/Read Me/Info.plist
+++ b/MacOS X/Resources/Read Me/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleIconFile</key>
 	<string>ReadMe</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.fruitz-of-dojo.quake-readme</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
